--- a/desafio/03/estilo/style.css
+++ b/desafio/03/estilo/style.css
@@ -66,15 +66,34 @@ section.normal {
     color: black;
 }
 
+section > p {
+    padding-bottom: 2m;
+}
+
 section.imagem {
-    background-color: rgb(78, 78, 78);
+    background-color: rgb(87, 87, 87);
     color: white;
+    box-shadow: inset 6px 6px 0px rgb(48, 48, 48);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.233);
+    text-shadow: 1px 1px 0px rgb(0, 0, 0);
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: cover;
 }
 
 footer {
